# ai-onboarding-categorization

./: .gitignore  README.md  main.py  pyproject.toml
data/analysis/: bankplus_raw_data_inventory.md
data/taxonomy/: product_categorization_taxonomy.md  transaction_categorization_taxonomy.md
docs/: architecture.md  contributing.md  data_dictionary.md  taxonomy_overview.md
docs/plans/: phase1_exploration_setup_plan.md
notebooks/: 00_prepare_ground_truth.ipynb  01_prepare_data.ipynb  01_prepare_transaction_catalog.ipynb  02_map_client_schema.ipynb  02_split_test_layers.ipynb  03_categorize_transactions.ipynb  03_discover_models.ipynb  03_evaluate_accuracy.ipynb  04_transaction_categorization_test.ipynb  05_evaluate_accuracy.ipynb
notebooks/products/: 01_prepare_product_data.ipynb  02_categorize_products.ipynb  03_evaluate_product_accuracy.ipynb
notebooks/transactions/: 01_prepare_data.ipynb  02_categorize_transactions.ipynb  03_evaluate_accuracy.ipynb
scripts/: 02_split_test_layers.py  analyze_test_results.py  check_naming.py  seed_account_history.py
sqlmesh/: config.yaml  databricks_state.db
sqlmesh/macros/: mock_ai_functions.py
sqlmesh/metastore_db/: db.lck  service.properties
sqlmesh/suggestions/: product_mapping.py
taxonomy/: bankplus_transaction_data_analysis.md  product_categorization_taxonomy.json  transaction_categorization_ambiguities.md  transaction_categorization_taxonomy.json  transaction_categorization_taxonomy.md
taxonomy/data/: Master Fee Table(Category Mapping).csv  Master Fee Table(Fee Template).csv  Master Fee Table(Master).csv  (+1 more)
(+147 files in other folders)
